add more types aqua

--- a/index.html
+++ b/index.html
@@ -8,24 +8,17 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="main-container">
-			<div class="box">
-				<p>Length A [cm]:</p>
-				<input id="length" class="input-c" type="number" />
-			</div>
-			<div class="box">
-				<p>Width B [cm]:</p>
-				<input id="width" class="input-c" type="number" />
-			</div>
-			<div class="box">
-				<p>Height C [cm]:</p>
-				<input id="height" class="input-c" type="number" />
-			</div>
-			<div class="btn-div">
-				<button>Calculate!</button>
-				<p id="answer" class="answer-c">?</p>
-			</div>
-		</div>
-		<script src="script.js"></script>
+		<nav class="main-container">
+			<li><a href="simple-aquarium.html">Simple Aquarium Calculator</a></li>
+			<li>
+				<a href="panoramic-aquarium.html">Panoramic Aquarium Calculator</a>
+			</li>
+			<li><a href="corner-aquarium.html">Corner Aquarium Calculator</a></li>
+			<li>
+				<a href="corner-panoramic-aquarium.html"
+					>Corner Panoramic Aquarium Calculator</a
+				>
+			</li>
+		</nav>
 	</body>
 </html>
