add html/css folder

--- a/html/corner-aquarium.html
+++ b/html/corner-aquarium.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Panoramic Aquarium Calculator</title>
-		<link rel="stylesheet" href="style.css" />
+		<title>Corner Aquarium Calculator</title>
+		<link rel="stylesheet" href="../style.css" />
 		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 	</head>
 	<body>
@@ -15,12 +15,8 @@
 				<input id="length" class="input-c" type="number" />
 			</div>
 			<div class="box">
-				<p>Width B1 [cm]:</p>
-				<input id="width1" class="input-c" type="number" />
-			</div>
-			<div class="box">
-				<p>Width B2 [cm]:</p>
-				<input id="width2" class="input-c" type="number" />
+				<p>Width B [cm]:</p>
+				<input id="width" class="input-c" type="number" />
 			</div>
 			<div class="box">
 				<p>Height C [cm]:</p>
@@ -31,9 +27,9 @@
 				<p id="answer" class="answer-c">?</p>
 			</div>
 			<div class="back">
-				<a href="index.html"><- GO BACK</a>
+				<a href="../html/index.html"><- GO BACK</a>
 			</div>
 		</div>
-		<script src="script-pano-aqua.js"></script>
+		<script src="../js/script-corner-aqua.js"></script>
 	</body>
 </html>
