--- a/html/corner-panoramic-aquarium.html
+++ b/html/corner-panoramic-aquarium.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Corner Panoramic Aquarium Calculator</title>
-		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="../style.css" />
 		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 	</head>
 	<body>
@@ -27,9 +27,9 @@
 				<p id="answer" class="answer-c">?</p>
 			</div>
 			<div class="back">
-				<a href="index.html"><- GO BACK</a>
+				<a href="../html/index.html"><- GO BACK</a>
 			</div>
 		</div>
-		<script src="script-corner-pano-aqua.js"></script>
+		<script src="../js/script-corner-pano-aqua.js"></script>
 	</body>
 </html>
