--- a/html/panoramic-aquarium.html
+++ b/html/panoramic-aquarium.html
@@ -4,8 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Corner Aquarium Calculator</title>
-		<link rel="stylesheet" href="style.css" />
+		<title>Panoramic Aquarium Calculator</title>
+		<link rel="stylesheet" href="../style.css" />
 		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 	</head>
 	<body>
@@ -15,8 +15,12 @@
 				<input id="length" class="input-c" type="number" />
 			</div>
 			<div class="box">
-				<p>Width B [cm]:</p>
-				<input id="width" class="input-c" type="number" />
+				<p>Width B1 [cm]:</p>
+				<input id="width1" class="input-c" type="number" />
+			</div>
+			<div class="box">
+				<p>Width B2 [cm]:</p>
+				<input id="width2" class="input-c" type="number" />
 			</div>
 			<div class="box">
 				<p>Height C [cm]:</p>
@@ -27,9 +31,9 @@
 				<p id="answer" class="answer-c">?</p>
 			</div>
 			<div class="back">
-				<a href="index.html"><- GO BACK</a>
+				<a href="../html/index.html"><- GO BACK</a>
 			</div>
 		</div>
-		<script src="script-corner-aqua.js"></script>
+		<script src="../js/script-pano-aqua.js"></script>
 	</body>
 </html>
