--- a/html/corner-aquarium.html
+++ b/html/corner-aquarium.html
@@ -27,7 +27,7 @@
 				<p id="answer" class="answer-c">?</p>
 			</div>
 			<div class="back">
-				<a href="../html/index.html"><- GO BACK</a>
+				<a href="../index.html"><- GO BACK</a>
 			</div>
 		</div>
 		<script src="../js/script-corner-aqua.js"></script>
