--- a/index.html
+++ b/index.html
@@ -5,18 +5,22 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Aquarium Calculator</title>
-		<link rel="stylesheet" href="../style.css" />
+		<link rel="stylesheet" href="style.css" />
 		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 	</head>
 	<body>
 		<nav class="main-container">
-			<li><a href="simple-aquarium.html">Simple Aquarium Calculator</a></li>
 			<li>
-				<a href="panoramic-aquarium.html">Panoramic Aquarium Calculator</a>
+				<a href="html/simple-aquarium.html">Simple Aquarium Calculator</a>
 			</li>
-			<li><a href="corner-aquarium.html">Corner Aquarium Calculator</a></li>
 			<li>
-				<a href="corner-panoramic-aquarium.html"
+				<a href="html/panoramic-aquarium.html">Panoramic Aquarium Calculator</a>
+			</li>
+			<li>
+				<a href="html/corner-aquarium.html">Corner Aquarium Calculator</a>
+			</li>
+			<li>
+				<a href="html/corner-panoramic-aquarium.html"
 					>Corner Panoramic Aquarium Calculator</a
 				>
 			</li>
