--- a/index.html
+++ b/index.html
@@ -10,20 +10,24 @@
 	</head>
 	<body>
 		<nav class="main-container">
-			<li>
-				<a href="html/simple-aquarium.html">Simple Aquarium Calculator</a>
-			</li>
-			<li>
-				<a href="html/panoramic-aquarium.html">Panoramic Aquarium Calculator</a>
-			</li>
-			<li>
-				<a href="html/corner-aquarium.html">Corner Aquarium Calculator</a>
-			</li>
-			<li>
-				<a href="html/corner-panoramic-aquarium.html"
-					>Corner Panoramic Aquarium Calculator</a
-				>
-			</li>
+			<ul>
+				<li>
+					<a href="html/simple-aquarium.html">Simple Aquarium Calculator</a>
+				</li>
+				<li>
+					<a href="html/panoramic-aquarium.html"
+						>Panoramic Aquarium Calculator</a
+					>
+				</li>
+				<li>
+					<a href="html/corner-aquarium.html">Corner Aquarium Calculator</a>
+				</li>
+				<li>
+					<a href="html/corner-panoramic-aquarium.html"
+						>Corner Panoramic Aquarium Calculator</a
+					>
+				</li>
+			</ul>
 		</nav>
 	</body>
 </html>
